src/objects/System_Design_Item__c.object
<CustomObject>
    <fields>
        <fullName>Method_1_Oct_Off_Peak_SQ__c</fullName>
        <label>Method 1 Oct Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Oct_Off_Peak_kwh__c</fullName>
        <formula>Method_1_Oct_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Oct Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Oct_Part_Peak_SQ__c</fullName>
        <label>Method 1 Oct Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Oct_Part_Peak_kwh__c</fullName>
        <formula>Method_1_Oct_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Oct Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Oct_Peak_SQ__c</fullName>
        <label>Method 1 Oct Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Oct_Peak_kwh__c</fullName>
        <formula>Method_1_Oct_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Oct Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Period_1_Production_kWh__c</fullName>
        <description>Monthly Production for Each Month</description>
        <label>Method 1 Period 1 Production kWh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Period_2_Production_kWh__c</fullName>
        <label>Method 1 Period 2 Production kWh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Period_3_Production_kWh__c</fullName>
        <label>Method 1 Period 3 Production kWh</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Flat_SQ__c</fullName>
        <label>Method 1 Sep Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Flat_kwh__c</fullName>
        <formula>Method_1_Sep_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Sep Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Off_Peak_SQ__c</fullName>
        <label>Method 1 Sep Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Off_Peak_kwh__c</fullName>
        <formula>Method_1_Sep_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Sep Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Part_Peak_SQ__c</fullName>
        <label>Method 1 Sep Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Part_Peak_kwh__c</fullName>
        <formula>Method_1_Sep_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Sep Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Peak_SQ__c</fullName>
        <label>Method 1 Sep Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Peak_kwh__c</fullName>
        <formula>Method_1_Sep_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 1 Sep Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Flat_SQ__c</fullName>
        <label>Method 2 Apr Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Flat_kwh__c</fullName>
        <formula>Method_2_Apr_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Apr Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Off_Peak_SQ__c</fullName>
        <label>Method 2 Apr Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Off_Peak_kwh__c</fullName>
        <formula>Method_2_Apr_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Apr Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Part_Peak_SQ__c</fullName>
        <label>Method 2 Apr Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Part_Peak_kwh__c</fullName>
        <formula>Method_2_Apr_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Apr Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Peak_SQ__c</fullName>
        <label>Method 2 Apr Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Peak_kwh__c</fullName>
        <formula>Method_2_Apr_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Apr Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Flat_SQ__c</fullName>
        <label>Method 2 Aug Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Flat_kwh__c</fullName>
        <formula>Method_2_Aug_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Aug Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Off_Peak_SQ__c</fullName>
        <label>Method 2 Aug Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Off_Peak_kwh__c</fullName>
        <formula>Method_2_Aug_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Aug Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Part_Peak_SQ__c</fullName>
        <label>Method 2 Aug Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Part_Peak_kwh__c</fullName>
        <formula>Method_2_Aug_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Aug Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Peak_SQ__c</fullName>
        <label>Method 2 Aug Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Peak_kwh__c</fullName>
        <formula>Method_2_Aug_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Aug Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Flat_SQ__c</fullName>
        <label>Method 2 Dec Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Flat_kwh__c</fullName>
        <formula>Method_2_Dec_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Dec Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Off_Peak_SQ__c</fullName>
        <label>Method 2 Dec Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Off_Peak_kwh__c</fullName>
        <formula>Method_2_Dec_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Dec Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Part_Peak_SQ__c</fullName>
        <label>Method 2 Dec Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Part_Peak_kwh__c</fullName>
        <formula>Method_2_Dec_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Dec Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Peak_SQ__c</fullName>
        <label>Method 2 Dec Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Peak_kwh__c</fullName>
        <formula>Method_2_Dec_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Dec Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Flat_SQ__c</fullName>
        <label>Method 2 Feb Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Flat_kwh__c</fullName>
        <formula>Method_2_Feb_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Feb Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Off_Peak_SQ__c</fullName>
        <label>Method 2 Feb Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Off_Peak_kwh__c</fullName>
        <formula>Method_2_Feb_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Feb Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Part_Peak_SQ__c</fullName>
        <label>Method 2 Feb Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Part_Peak_kwh__c</fullName>
        <formula>Method_2_Feb_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Feb Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Peak_SQ__c</fullName>
        <label>Method 2 Feb Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Peak_kwh__c</fullName>
        <formula>Method_2_Feb_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Feb Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Flat_SQ__c</fullName>
        <label>Method 2 Jan Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Flat_kwh__c</fullName>
        <formula>Method_2_Jan_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jan Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Off_Peak_SQ__c</fullName>
        <label>Method 2 Jan Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Off_Peak_kwh__c</fullName>
        <formula>Method_2_Jan_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jan Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Part_Peak_SQ__c</fullName>
        <label>Method 2 Jan Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Part_Peak_kwh__c</fullName>
        <formula>Method_2_Jan_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jan Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Peak_SQ__c</fullName>
        <label>Method 2 Jan Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Peak_kwh__c</fullName>
        <formula>Method_2_Jan_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jan Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Flat_SQ__c</fullName>
        <label>Method 2 Jul Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Flat_kwh__c</fullName>
        <formula>Method_2_Jul_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jul Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Off_Peak_SQ__c</fullName>
        <label>Method 2 Jul Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Off_Peak_kwh__c</fullName>
        <formula>Method_2_Jul_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jul Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Part_Peak_SQ__c</fullName>
        <label>Method 2 Jul Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Part_Peak_kwh__c</fullName>
        <formula>Method_2_Jul_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jul Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Peak_SQ__c</fullName>
        <label>Method 2 Jul Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Peak_kwh__c</fullName>
        <formula>Method_2_Jul_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jul Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Flat_SQ__c</fullName>
        <label>Method 2 Jun Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Flat_kwh__c</fullName>
        <formula>Method_2_Jun_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jun Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Off_Peak_SQ__c</fullName>
        <label>Method 2 Jun Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Off_Peak_kwh__c</fullName>
        <formula>Method_2_Jun_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jun Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Part_Peak_SQ__c</fullName>
        <label>Method 2 Jun Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Part_Peak_kwh__c</fullName>
        <formula>Method_2_Jun_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jun Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Peak_SQ__c</fullName>
        <label>Method 2 Jun Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Peak_kwh__c</fullName>
        <formula>Method_2_Jun_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Jun Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Flat_SQ__c</fullName>
        <label>Method 2 Mar Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Flat_kwh__c</fullName>
        <formula>Method_2_Mar_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Mar Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Off_Peak_SQ__c</fullName>
        <label>Method 2 Mar Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Off_Peak_kwh__c</fullName>
        <formula>Method_2_Mar_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Mar Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Part_Peak_SQ__c</fullName>
        <label>Method 2 Mar Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Part_Peak_kwh__c</fullName>
        <formula>Method_2_Mar_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Mar Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Peak_SQ__c</fullName>
        <label>Method 2 Mar Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Peak_kwh__c</fullName>
        <formula>Method_2_Mar_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Mar Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Flat_SQ__c</fullName>
        <label>Method 2 May Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Flat_kwh__c</fullName>
        <formula>Method_2_May_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 May Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Off_Peak_SQ__c</fullName>
        <label>Method 2 May Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Off_Peak_kwh__c</fullName>
        <formula>Method_2_May_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 May Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Part_Peak_SQ__c</fullName>
        <label>Method 2 May Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Part_Peak_kwh__c</fullName>
        <formula>Method_2_May_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 May Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Peak_SQ__c</fullName>
        <label>Method 2 May Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Peak_kwh__c</fullName>
        <formula>Method_2_May_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 May Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Flat_SQ__c</fullName>
        <label>Method 2 Nov Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Flat_kwh__c</fullName>
        <formula>Method_2_Nov_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Nov Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Off_Peak_SQ__c</fullName>
        <label>Method 2 Nov Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Off_Peak_kwh__c</fullName>
        <formula>Method_2_Nov_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Nov Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Part_Peak_SQ__c</fullName>
        <label>Method 2 Nov Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Part_Peak_kwh__c</fullName>
        <formula>Method_2_Nov_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Nov Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Peak_SQ__c</fullName>
        <label>Method 2 Nov Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Peak_kwh__c</fullName>
        <formula>Method_2_Nov_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Nov Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Flat_SQ__c</fullName>
        <label>Method 2 Oct Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Flat_kwh__c</fullName>
        <formula>Method_2_Oct_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Oct Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Off_Peak_SQ__c</fullName>
        <label>Method 2 Oct Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Off_Peak_kwh__c</fullName>
        <formula>Method_2_Oct_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Oct Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Part_Peak_SQ__c</fullName>
        <label>Method 2 Oct Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Part_Peak_kwh__c</fullName>
        <formula>Method_2_Oct_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Oct Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Peak_SQ__c</fullName>
        <label>Method 2 Oct Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Peak_kwh__c</fullName>
        <formula>Method_2_Oct_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Oct Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Flat_SQ__c</fullName>
        <label>Method 2 Sep Flat SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Flat_kwh__c</fullName>
        <formula>Method_2_Sep_Flat_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Sep Flat kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Off_Peak_SQ__c</fullName>
        <label>Method 2 Sep Off_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Off_Peak_kwh__c</fullName>
        <formula>Method_2_Sep_Off_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Sep Off_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Part_Peak_SQ__c</fullName>
        <label>Method 2 Sep Part_Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Part_Peak_kwh__c</fullName>
        <formula>Method_2_Sep_Part_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Sep Part_Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Peak_SQ__c</fullName>
        <label>Method 2 Sep Peak SQ</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Peak_kwh__c</fullName>
        <formula>Method_2_Sep_Peak_SQ__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Method 2 Sep Peak kwh</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <description>Model</description>
        <formula>System_Design_Product__r.Model__c</formula>
        <inlineHelpText>Model</inlineHelpText>
        <label>Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRG_Balance_of_System_Derate_Text__c</fullName>
        <label>NRG Balance of System Derate Text</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Balance_of_System_Derate__c</fullName>
        <formula>IF(System_Design_Array__r.System_Design__r.NRG_Balance_of_System_Derate__c &gt; 0,System_Design_Array__r.System_Design__r.NRG_Balance_of_System_Derate__c,$Setup.System_Derate_Defaults__c.NRG_Balance_of_System_Derate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRG Balance of System Derate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_PV_Watts_De_Rate__c</fullName>
        <description>NRG PVWatts derate is calculated based on the specific inverter and whether the inverter is a central or microinverter.
NRG PV Watts Derate = AC-to-DC Derate Factor * Inverter CEC Efficiency * Shading Factor
AC-to-DC Derate is 0.946 for microinverters and 0.895 for string inverters
CEC Efficiency is the California Energy Commission (CEC) listed efficiency of the inverter
Shading Factor is the Solar Access percentage (SA) for string inverters and (0.4 + 0.6 * SA) for microinverters.</description>
        <formula>NRG_Balance_of_System_Derate__c  *  Inverter_and_Transformer_Efficiency__c  * (0.4 + (0.6 *  Panel_Annual_Solar_Access__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRG PV Watts De-Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_PV_Watts_Derate_Text__c</fullName>
        <label>NRG PV Watts Derate Text</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Projected_Annual_Output_kWh_y__c</fullName>
        <formula>NRG_Site_Quality__c *  Rated_Output_kW__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRG Projected Annual Output (kWh/y)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Site_Quality__c</fullName>
        <label>NRG Site Quality</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nov_Solar_Access__c</fullName>
        <formula>Install_Location__r.Nov_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nov Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Oct_Solar_Access__c</fullName>
        <formula>Install_Location__r.Oct_Solar_Access__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oct Solar Access</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>